# mpc_wallet

./: .gitignore  Makefile.toml  README.md  pubspec.yaml
.github/workflows/: build.yml
android/: google-services.json
android/app/: build.gradle  google-services.json
android/app/src/: .gitignore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/mpc_wallet/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/: firebase_app_id_file.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: .gitignore  ffi.dart  firebase_options.dart  main.dart
lib/fcm/: facade.dart  mobile.dart  web.dart
lib/model/: account_keyword.dart  partial_key.dart
lib/native/: bridge_api.dart  bridge_api.io.dart
lib/pages/account/: add.dart
lib/pages/sample/: messaging.dart  rustuse.dart  wallet_connect.dart
lib/util/: fcm.dart  wasmlib.dart
lib/wasmlib/: bridge_api.dart  bridge_api.io.dart  bridge_api.web.dart  facade.dart  ffi.dart  web.dart
native/: Cargo.toml
native/src/: api.rs
test/: widget_test.dart
test/model/: account_keyword_test.dart
wasmlib/: Cargo.toml  LICENSE_MIT
wasmlib/libs/gg20/: Cargo.toml
wasmlib/libs/gg20/src/: keygen.rs  lib.rs
wasmlib/src/: .gitignore  api.rs  bridge_generated.rs  lib.rs
wasmlib/src/bulletproof/: mod.rs
wasmlib/src/bulletproof/proofs/: inner_product.rs  range_proof.rs  range_proof_wip.rs  weighted_inner_product.rs
wasmlib/src/centipede/: mod.rs  wallet.rs
wasmlib/src/centipede/juggling/: proof_system.rs
wasmlib/src/curv/: mod.rs
wasmlib/src/curv/arithmetic/: mod.rs
wasmlib/src/curv/cryptographic_primitives/hashing/: ext.rs
wasmlib/src/curv/elliptic/curves/: curve_ristretto.rs  ed25519.rs  mod.rs  p256.rs  secp256_k1.rs  traits.rs
wasmlib/src/curv/elliptic/curves/wrappers/: arithmetic.rs  encoded_point.rs  encoded_scalar.rs  error.rs  generator.rs  point.rs  scalar.rs  serde_support.rs
wasmlib/src/gg20/: blame.rs  party_i.rs  test.rs
wasmlib/src/gg20/state_machine/: keygen.rs  sign.rs
wasmlib/src/gg20/state_machine/keygen/: rounds.rs
wasmlib/src/gg20/state_machine/sign/: fmt.rs  rounds.rs
wasmlib/src/paillier/: core.rs  keygen.rs  mod.rs  serialize.rs
wasmlib/src/paillier/encoding/: integral.rs  mod.rs
wasmlib/src/round_based/containers/: broadcast.rs  p2p.rs  traits.rs
wasmlib/src/round_based/dev/: async_simulation.rs  simulation.rs
wasmlib/src/utilities/mta/: mod.rs  range_proofs.rs  test.rs
wasmlib/src/utilities/zk_pdl/: mod.rs  test.rs
wasmlib/src/utilities/zk_pdl_with_slack/: mod.rs  test.rs
web/: firebase-messaging-sw.js  index.html  manifest.json
