[package]
name = "mpc-ecdsa-wasm"
version = "0.2.0"
edition = "2018"
license = "MIT"
description = "Webassembly bindings to multi-party-ecdsa"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#mpc-ecdsa-getrandom-hack = {path = "../demo-gg20-wasm/getrandom", version = "*"}
#curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}
#rand = { version="0.6.5", features = ["wasm-bindgen"] }
#rand = { version="0.7.3", features = ["getrandom"] }
#console_error_panic_hook = "0.1.6"
#sha3 = "0.10"
#serde = {version = "1", features = ["derive"]}
hex = "0.4"

[dependencies.getrandom]
default-features = false
features = ["js"]
version = "0.2"

[dependencies.multi-party-ecdsa]
path = "../ZenGo-X/multi-party-ecdsa"
#git = "https://github.com/ZenGo-X/multi-party-ecdsa"
#git = "https://github.com/tmpfs/multi-party-ecdsa"
#branch = "libsecp256k1-dev-dep"
default-features = false
#rev = "c94065fbf37132dccc7955cf2627866e87c162bf"
version = "*"

[dev-dependencies]
wasm-bindgen-test = "0.3"